--- a/package.json
+++ b/package.json
@@ -8,8 +8,20 @@
     "start": "next start"
   },
   "dependencies": {
+    "date-fns": "^2.16.1",
+    "eslint": "^7.13.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-react": "^7.21.5",
+    "gray-matter": "^4.0.2",
     "next": "^10.0.0",
-    "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "npm": "^6.14.8",
+    "postcss": "^8.1.7",
+    "postcss-flexbugs-fixes": "^5.0.1",
+    "postcss-preset-env": "^6.7.0",
+    "react": "^16.13.1",
+    "react-dom": "16.13.1",
+    "remark": "^13.0.0",
+    "remark-html": "^13.0.1",
+    "tailwindcss": "^1.9.6"
   }
 }
